Update hw1 file.

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,43 +18,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6449.000000\n",
-       "mean        1.401768\n",
-       "std         0.852127\n",
+       "count    6444.000000\n",
+       "mean        1.395872\n",
+       "std         0.825739\n",
        "min         1.000000\n",
        "25%         1.000000\n",
        "50%         1.000000\n",
        "75%         1.000000\n",
-       "max         9.000000\n",
+       "max         7.000000\n",
        "Name: resty, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Exclude responses of 9 'REFUSED'\n",
+    "df = df.loc[df['resty'] != 9]\n",
     "df['resty'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6019.000000\n",
-       "mean        5.056156\n",
-       "std         1.911337\n",
+       "count    6014.000000\n",
+       "mean        5.056202\n",
+       "std         1.911696\n",
        "min         1.000000\n",
        "25%         4.000000\n",
        "50%         5.000000\n",
@@ -63,28 +65,28 @@
        "Name: income, dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exclude responses of 99 'REFUSED'\n",
-    "df_inc = df.loc[df['income'] != 99]\n",
-    "df_inc['income'].describe()"
+    "df = df.loc[df['income'] != 99]\n",
+    "df['income'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6449.000000\n",
-       "mean        1.948209\n",
-       "std         1.124169\n",
+       "count    6014.000000\n",
+       "mean        1.954440\n",
+       "std         1.130994\n",
        "min         0.000000\n",
        "25%         1.000000\n",
        "50%         2.000000\n",
@@ -93,7 +95,7 @@
        "Name: hhveh, dtype: float64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,24 +106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6449.000000\n",
-       "mean        9.815165\n",
-       "std         7.819117\n",
+       "count    6014.000000\n",
+       "mean        9.840871\n",
+       "std         7.763646\n",
        "min         0.000000\n",
        "25%         4.000000\n",
        "50%         8.000000\n",
        "75%        14.000000\n",
-       "max        81.000000\n",
+       "max        65.000000\n",
        "Name: htrips, dtype: float64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +133,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculate average number of trips by vehicle:*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -140,28 +149,34 @@
      "output_type": "stream",
      "text": [
       "hhveh\n",
-      "0     7.925072\n",
-      "1     6.988945\n",
-      "2    11.066562\n",
-      "3    11.666027\n",
-      "4    12.160350\n",
-      "5    12.377358\n",
-      "6    10.906977\n",
-      "7    13.416667\n",
-      "8     8.916667\n",
+      "0     7.997006\n",
+      "1     7.002183\n",
+      "2    11.125842\n",
+      "3    11.546012\n",
+      "4    12.211480\n",
+      "5    12.202020\n",
+      "6    11.071429\n",
+      "7    13.636364\n",
+      "8     8.363636\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "#B Calculate average number of trips by number of vehicles\n",
     "df_v1 = df.groupby(['hhveh'])['htrips'].mean()\n",
     "print(df_v1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculate average number of trips by income:*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -169,21 +184,19 @@
      "output_type": "stream",
      "text": [
       "income\n",
-      "1      6.359873\n",
-      "2      6.837113\n",
-      "3      6.828810\n",
-      "4      8.079408\n",
-      "5      9.677517\n",
-      "6     11.241623\n",
-      "7     12.244817\n",
-      "8     12.622642\n",
-      "99     9.500000\n",
+      "1     6.359873\n",
+      "2     6.837113\n",
+      "3     6.838912\n",
+      "4     8.080863\n",
+      "5     9.672727\n",
+      "6    11.247132\n",
+      "7    12.256917\n",
+      "8    12.622642\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "#B Calculate average number of trips by Income\n",
     "df_vi = df.groupby(['income'])['htrips'].mean()\n",
     "print(df_vi)"
    ]
@@ -192,11 +205,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Based on your calculation, how do you describe the relationship between number of vehicles and number of trips?\n",
+    "*Based on your calculation, how do you describe the relationship between number of vehicles and number of trips?*\n",
     "\n",
-    "Having two or more vehicles generally sees an increase in number of trips compared to zero or single-car households. The largest jump is from 1 to 2 cars per household, a 57% increase in trips. However, there is little difference between having 2-7 cars per household in terms of trips. The highest number of cars owned per household actually sees fewer trips than the next highest categories.\n",
+    "Having two or more vehicles generally sees an increase in number of trips compared to zero or single-car households. The largest jump is from 1 to 2 cars per household, a 57% increase in trips. However, there is little difference between having 2-7 cars per household in terms of trips. The highest number of cars owned per household (8) actually sees fewer trips than the next highest categories.\n",
     "\n",
-    "##### Income?\n",
+    "*Income?*\n",
+    "\n",
     "Lowest income levels have similar numbers of trips, but generally speaking, the number of trips increase with income. Again, the highest income group drops off in terms of trips."
    ]
   },
@@ -204,12 +218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Count the number of households within each INC_CAT and then calculate average number of trips."
+    "*Create a new variable INC_CAT that collapses the 8 income categories in the raw INCOME column into 3 categories (e.g. $0 - $24,999, $25,000 - $49,999, $50,000 and above). Count number of households within each INC_CAT and then calculate average number of trips by INC_CAT.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -219,16 +233,16 @@
       "Total numbers of households per INC_CAT:\n",
       "inc_cat\n",
       "1.0     799\n",
-      "2.0    1652\n",
-      "3.0    3998\n",
+      "2.0    1220\n",
+      "3.0    3995\n",
       "dtype: int64\n",
       "\n",
       "\n",
       "Average number of trips by INC_CAT:\n",
       "inc_cat\n",
       "1.0     6.649562\n",
-      "2.0     8.086562\n",
-      "3.0    11.162081\n",
+      "2.0     7.594262\n",
+      "3.0    11.165207\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
@@ -240,7 +254,7 @@
     "            df_inc.set_value(index, 'inc_cat', 1)\n",
     "        elif row.income >= 3 and row.income <= 4:\n",
     "            df_inc.set_value(index, 'inc_cat', 2)\n",
-    "        elif row.income >= 5 and row.income < 99:\n",
+    "        elif row.income >= 5:\n",
     "            df_inc.set_value(index, 'inc_cat', 3)\n",
     "    return df_inc\n",
     "        \n",
@@ -251,6 +265,236 @@
     "print(\"Average number of trips by INC_CAT:\")\n",
     "print(df_new_inc_cat.groupby(['inc_cat'])['htrips'].mean())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Create a new variable INCVAL that is equal to the mid-point of the range for categories 1 through 7 and $250,000 for category 8 (Set missing values for category 99). Run frequencies and summary to compute the mean and standard deviation for this new variable. Calculate the correlation between INCVAL and number of trips (HTRIPS).*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             hhveh        resty       income       htrips      inc_cat  \\\n",
+      "count  6014.000000  6014.000000  6014.000000  6014.000000  6014.000000   \n",
+      "mean      1.954440     1.392584     5.056202     9.840871     2.531427   \n",
+      "std       1.130994     0.823336     1.911696     7.763646     0.717504   \n",
+      "min       0.000000     1.000000     1.000000     0.000000     1.000000   \n",
+      "25%       1.000000     1.000000     4.000000     4.000000     2.000000   \n",
+      "50%       2.000000     1.000000     5.000000     8.000000     3.000000   \n",
+      "75%       2.000000     1.000000     7.000000    14.000000     3.000000   \n",
+      "max       8.000000     7.000000     8.000000    65.000000     3.000000   \n",
+      "\n",
+      "              incval  \n",
+      "count    6014.000000  \n",
+      "mean    82900.691387  \n",
+      "std     62407.293019  \n",
+      "min      7499.500000  \n",
+      "25%     42499.500000  \n",
+      "50%     62499.500000  \n",
+      "75%    124999.500000  \n",
+      "max    250000.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "def set_incval(df_incval):\n",
+    "    for index, row in df_incval.iterrows():\n",
+    "        if row.income == 1:\n",
+    "            df_incval.set_value(index, 'incval', ((14999-0)/2 + 0))\n",
+    "        elif row.income == 2:\n",
+    "            df_incval.set_value(index, 'incval', ((15000-24999)/2 + 24999))\n",
+    "        elif row.income == 3:\n",
+    "            df_incval.set_value(index, 'incval', ((34999-25000)/2 + 25000))\n",
+    "        elif row.income == 4:\n",
+    "            df_incval.set_value(index, 'incval', ((49999-35000)/2 + 35000))\n",
+    "        elif row.income == 5:\n",
+    "            df_incval.set_value(index, 'incval', ((74999-50000)/2 + 50000))\n",
+    "        elif row.income == 6:\n",
+    "            df_incval.set_value(index, 'incval', ((99999-75000)/2 + 75000)) \n",
+    "        elif row.income == 7:\n",
+    "            df_incval.set_value(index, 'incval', ((149999-100000)/2 + 100000))\n",
+    "        elif row.income == 8:\n",
+    "            df_incval.set_value(index, 'incval', 250000)\n",
+    "        elif row.income == 99:\n",
+    "            df_incval.set_value(index, 'incval', None)          \n",
+    "    return df_incval\n",
+    "\n",
+    "df_incval_new = set_incval(df_new_inc_cat)\n",
+    "print(df_incval_new.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Explain why the mean and standard deviation from the original income category (INCOME) variable would not be useful.*\n",
+    "\n",
+    "Original INCOME variables are not useful since they are coded values and do accurately convey the actual dollar amounts needed for useful analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Calculate the correlation between INCVAL and number of trips*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between incval and htrips:\n",
+      "0.227872645556\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Correlation between incval and htrips:')\n",
+    "print(df_incval_new['incval'].corr(df_incval_new['htrips']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Recode HHVEH into a new variable HHVEH_CAT to reduce the size of the table (this will make interpretation easier). Use judgment about which groups to combine (review your frequency analysis in Question a) in making these judgments). You can accomplish the regrouping by using the RECODE command in SPSS (or cut function in R and if function in Excel). When grouping variables, you should create a new variable and modify the variable name value labels appropriately. Calculate average number of trips by HHVEH_CAT. What is the advantage of this calculation comparing with the average number of trips by number of vehicles in question b)?*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hhveh_cat\n",
+      "0.0     7.997006\n",
+      "1.0     7.002183\n",
+      "2.0    11.125842\n",
+      "3.0    11.718071\n",
+      "Name: htrips, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vehicle_categorizer(df_veh):\n",
+    "    for index, row in df_inc.iterrows():\n",
+    "        if row.hhveh == 0:\n",
+    "            df_veh.set_value(index, 'hhveh_cat', 0)\n",
+    "        elif row.hhveh == 1:\n",
+    "            df_veh.set_value(index, 'hhveh_cat', 1)\n",
+    "        elif row.hhveh == 2:\n",
+    "            df_veh.set_value(index, 'hhveh_cat', 2)\n",
+    "        elif row.hhveh >= 3:\n",
+    "            df_veh.set_value(index, 'hhveh_cat', 3)\n",
+    "    return df_veh\n",
+    "\n",
+    "df_veh_cat_new = vehicle_categorizer(df)\n",
+    "print(df_veh_cat_new.groupby(['hhveh_cat'])['htrips'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*What is the advantage of this calculation comparing with the average number of trips by number of vehicles in question b)?*\n",
+    "\n",
+    "Regrouping the hhveh number allows us to better match average vehicle ownership rates per household in the U.S. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between income and htrips:\n",
+      "0.266964320558\n",
+      "Correlation between incval and htrips:\n",
+      "0.227872645556\n",
+      "Correlation between inc_cat and htrips:\n",
+      "0.234081447426\n",
+      "Correlation between hhveh and htrips:\n",
+      "0.202439549024\n",
+      "Correlation between hhveh_cat and htrips:\n",
+      "0.228604295745\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Correlation between income and htrips:')\n",
+    "print(df_veh_cat_new['income'].corr(df_veh_cat_new['htrips']))\n",
+    "print('Correlation between incval and htrips:')\n",
+    "print(df_veh_cat_new['incval'].corr(df_veh_cat_new['htrips']))\n",
+    "print('Correlation between inc_cat and htrips:')\n",
+    "print(df_veh_cat_new['inc_cat'].corr(df_veh_cat_new['htrips']))\n",
+    "print('Correlation between hhveh and htrips:')\n",
+    "print(df_veh_cat_new['hhveh'].corr(df_veh_cat_new['htrips']))\n",
+    "print('Correlation between hhveh_cat and htrips:')\n",
+    "print(df_veh_cat_new['hhveh_cat'].corr(df_veh_cat_new['htrips']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between income and resty:\n",
+      "-0.393130280469\n",
+      "Correlation between incval and resty:\n",
+      "-0.288473772987\n",
+      "Correlation between inc_cat and resty:\n",
+      "-0.385595887363\n",
+      "Correlation between hhveh and resty:\n",
+      "-0.374949618769\n",
+      "Correlation between hhveh_cat and resty:\n",
+      "-0.430969976531\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Correlation between income and resty:')\n",
+    "print(df_veh_cat_new['income'].corr(df_veh_cat_new['resty']))\n",
+    "print('Correlation between incval and resty:')\n",
+    "print(df_veh_cat_new['incval'].corr(df_veh_cat_new['resty']))\n",
+    "print('Correlation between inc_cat and resty:')\n",
+    "print(df_veh_cat_new['inc_cat'].corr(df_veh_cat_new['resty']))\n",
+    "print('Correlation between hhveh and resty:')\n",
+    "print(df_veh_cat_new['hhveh'].corr(df_veh_cat_new['resty']))\n",
+    "print('Correlation between hhveh_cat and resty:')\n",
+    "print(df_veh_cat_new['hhveh_cat'].corr(df_veh_cat_new['resty']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
