Update hw1 file.

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 249,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6449, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -13,12 +21,13 @@
     "\n",
     "df = pd.read_csv(os.path.join(\n",
     "    os.path.dirname(\"__file__\"), \n",
-    "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', 'htrips'])"
+    "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', 'htrips'])\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -35,28 +44,28 @@
        "Name: resty, dtype: float64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exclude responses of 9 'REFUSED'\n",
-    "df = df.loc[df['resty'] != 9]\n",
-    "df['resty'].describe()"
+    "df_resty = df.loc[df['resty'] != 9]\n",
+    "df_resty['resty'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6014.000000\n",
-       "mean        5.056202\n",
-       "std         1.911696\n",
+       "count    6019.000000\n",
+       "mean        5.056156\n",
+       "std         1.911337\n",
        "min         1.000000\n",
        "25%         4.000000\n",
        "50%         5.000000\n",
@@ -65,28 +74,28 @@
        "Name: income, dtype: float64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exclude responses of 99 'REFUSED'\n",
-    "df = df.loc[df['income'] != 99]\n",
-    "df['income'].describe()"
+    "df_inc = df.loc[df['income'] != 99]\n",
+    "df_inc['income'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    6014.000000\n",
-       "mean        1.954440\n",
-       "std         1.130994\n",
+       "count    6449.000000\n",
+       "mean        1.948209\n",
+       "std         1.124169\n",
        "min         0.000000\n",
        "25%         1.000000\n",
        "50%         2.000000\n",
@@ -95,13 +104,14 @@
        "Name: hhveh, dtype: float64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['hhveh'].describe()"
+    "df_veh = df.loc[df['hhveh'] != 99]\n",
+    "df_veh['hhveh'].describe()"
    ]
   },
   {
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -149,15 +159,15 @@
      "output_type": "stream",
      "text": [
       "hhveh\n",
-      "0     7.997006\n",
-      "1     7.002183\n",
-      "2    11.125842\n",
-      "3    11.546012\n",
-      "4    12.211480\n",
-      "5    12.202020\n",
-      "6    11.071429\n",
-      "7    13.636364\n",
-      "8     8.363636\n",
+      "0     7.925072\n",
+      "1     6.988945\n",
+      "2    11.066562\n",
+      "3    11.666027\n",
+      "4    12.160350\n",
+      "5    12.377358\n",
+      "6    10.906977\n",
+      "7    13.416667\n",
+      "8     8.916667\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +194,15 @@
      "output_type": "stream",
      "text": [
       "income\n",
-      "1     6.359873\n",
-      "2     6.837113\n",
-      "3     6.838912\n",
-      "4     8.080863\n",
-      "5     9.672727\n",
-      "6    11.247132\n",
-      "7    12.256917\n",
-      "8    12.622642\n",
+      "1      6.359873\n",
+      "2      6.837113\n",
+      "3      6.828810\n",
+      "4      8.079408\n",
+      "5      9.677517\n",
+      "6     11.241623\n",
+      "7     12.244817\n",
+      "8     12.622642\n",
+      "99     9.500000\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -233,16 +244,16 @@
       "Total numbers of households per INC_CAT:\n",
       "inc_cat\n",
       "1.0     799\n",
-      "2.0    1220\n",
-      "3.0    3995\n",
+      "2.0    1222\n",
+      "3.0    4428\n",
       "dtype: int64\n",
       "\n",
       "\n",
       "Average number of trips by INC_CAT:\n",
       "inc_cat\n",
       "1.0     6.649562\n",
-      "2.0     7.594262\n",
-      "3.0    11.165207\n",
+      "2.0     7.589198\n",
+      "3.0    11.000678\n",
       "Name: htrips, dtype: float64\n"
      ]
     }
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -283,19 +294,19 @@
      "output_type": "stream",
      "text": [
       "             hhveh        resty       income       htrips      inc_cat  \\\n",
-      "count  6014.000000  6014.000000  6014.000000  6014.000000  6014.000000   \n",
-      "mean      1.954440     1.392584     5.056202     9.840871     2.531427   \n",
-      "std       1.130994     0.823336     1.911696     7.763646     0.717504   \n",
+      "count  6449.000000  6449.000000  6449.000000  6449.000000  6449.000000   \n",
+      "mean      1.948209     1.401768    11.320050     9.815165     2.562723   \n",
+      "std       1.124169     0.852127    23.509842     7.819117     0.702804   \n",
       "min       0.000000     1.000000     1.000000     0.000000     1.000000   \n",
       "25%       1.000000     1.000000     4.000000     4.000000     2.000000   \n",
       "50%       2.000000     1.000000     5.000000     8.000000     3.000000   \n",
       "75%       2.000000     1.000000     7.000000    14.000000     3.000000   \n",
-      "max       8.000000     7.000000     8.000000    65.000000     3.000000   \n",
+      "max       8.000000     9.000000    99.000000    81.000000     3.000000   \n",
       "\n",
       "              incval  \n",
-      "count    6014.000000  \n",
-      "mean    82900.691387  \n",
-      "std     62407.293019  \n",
+      "count    6019.000000  \n",
+      "mean    82889.558980  \n",
+      "std     62390.205001  \n",
       "min      7499.500000  \n",
       "25%     42499.500000  \n",
       "50%     62499.500000  \n",
@@ -404,6 +415,7 @@
     "            df_veh.set_value(index, 'hhveh_cat', 3)\n",
     "    return df_veh\n",
     "\n",
+    "\n",
     "df_veh_cat_new = vehicle_categorizer(df)\n",
     "print(df_veh_cat_new.groupby(['hhveh_cat'])['htrips'].mean())"
    ]
@@ -488,13 +500,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Explain what the weight column (hhwgt and exphhwgt) is (or does)?*\n",
+    "\n",
+    "Weights households to give more emphasis to certain responses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Create a new variable by multiplying the number of trips with the household weighting factor (exphhwgt), for example, for the first household in the household table in OHAS data set, 3 vehicles &ast; weighting factor of 217.05 = 651.15 weighted vehicles*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hhveh         3.000000\n",
+      "resty         1.000000\n",
+      "income        5.000000\n",
+      "htrips        6.000000\n",
+      "hhwgt         1.591203\n",
+      "exphhwgt    217.054444\n",
+      "hhvehwgt    651.163331\n",
+      "Name: 0, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(os.path.join(\n",
+    "    os.path.dirname(\"__file__\"), \n",
+    "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', \n",
+    "                                    'hhwgt', 'htrips', 'exphhwgt'])\n",
+    "df['hhvehwgt'] = df['exphhwgt'] * df['hhveh']\n",
+    "print(df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Sum the new variable created in step 1 over all samples (households) and sum the entire weighting factor (exphhwgt) over all samples (households);*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hhvehwgt sum = 1487688.8128576986\n",
+      "exphhwgt sum = 807567.0000014375\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_hhvehwgt = df['hhvehwgt'].sum()\n",
+    "sum_exphhwgt = df['exphhwgt'].sum()\n",
+    "print(\"hhvehwgt sum =\", sum_hhvehwgt)\n",
+    "print(\"exphhwgt sum =\", sum_exphhwgt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Divide the sum of weighted variable by the sum of weighting factors and you get the weighted average (mean)*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weighted average = 1.8421862369995932\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Weighted average =\", sum_hhvehwgt / sum_exphhwgt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9482090246549852\n"
+     ]
+    }
+   ],
+   "source": [
+    "hhveh_avg = df['hhveh'].mean()\n",
+    "print(hhveh_avg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Is there a difference between the average number of vehicles and the weighted average number of vehicles? If so, what does the difference tell you?*\n",
+    "\n",
+    "Yes, there is a very slight difference between the weighted average and the vehicular average, which means that the survey response may be recording slightly higher vehicle numbers than is accurate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Following the same steps above, compute the percent of households that use transit at least once a week (the RIBUS column) without and with the household weighting factor.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ribus unweighted = 1.3809380521963068 percent\n",
+      "ribus weighted = 28.599366847117153 percent\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_ribus(df_ribus):\n",
+    "    for index, row in df_ribus.iterrows():\n",
+    "        if row.ribus == 1:\n",
+    "            df_ribus.set_value(index, 'ribus_count', 1)\n",
+    "    return df_ribus\n",
+    "    \n",
+    "df = pd.read_csv(os.path.join(\n",
+    "    os.path.dirname(\"__file__\"), \n",
+    "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', \n",
+    "                                    'ribus', 'htrips', 'hhwgt', 'exphhwgt'])\n",
+    "df = calc_ribus(df)\n",
+    "df['ribuswgt'] = df['exphhwgt'] * df['ribus_count']\n",
+    "hh_count = df.shape[0]\n",
+    "ribus_pct = (df['ribus'].sum() / df['exphhwgt'].sum()) * 100\n",
+    "ribuswgt_pct = (df['ribuswgt'].sum() / df['exphhwgt'].sum()) * 100\n",
+    "print(\"ribus unweighted =\", ribus_pct, 'percent')\n",
+    "print(\"ribus weighted =\", ribuswgt_pct, 'percent')"
+   ]
   }
  ],
  "metadata": {
