update file for output.

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 6449 rows and 4 columns in the dataset.\n"
+      "There are 6449 rows and 4 columns in thedataset.\n"
      ]
     }
    ],
@@ -53,7 +53,8 @@
     "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', 'htrips'])\n",
     "\n",
     "# Count number of rows/columns in dataset:\n",
-    "print(\"There are {} rows and {} columns in the dataset.\".format(df.shape[0], df.shape[1]))"
+    "print(\"There are {} rows and {} columns in the\" \\\n",
+    "      \"dataset.\".format(df.shape[0], df.shape[1]))"
    ]
   },
   {
@@ -118,7 +119,8 @@
    "source": [
     "# 1a (cont'd)\n",
     "df_resty = df\n",
-    "df_resty['resty'].describe().to_frame().style.set_caption('Summary Statistics of Column `resty`')"
+    "df_resty['resty'].describe().to_frame().style.set_caption(\n",
+    "    'Summary Statistics of Column `resty`')"
    ]
   },
   {
@@ -201,7 +203,8 @@
     "# 1a (cont'd)\n",
     "# Exclude responses of 99 'REFUSED'\n",
     "df_inc = df.loc[df['income'] != 99]\n",
-    "df_inc['income'].describe().to_frame().style.set_caption('Summary Statistics of Column `income`')"
+    "df_inc['income'].describe().to_frame().style.set_caption(\n",
+    "    'Summary Statistics of Column `income`')"
    ]
   },
   {
@@ -283,7 +286,8 @@
    "source": [
     "# 1a (cont'd)\n",
     "df_veh = df.loc[df['hhveh'] != 99]\n",
-    "df_veh['hhveh'].describe().to_frame().style.set_caption('Summary Statistics of Column `hhveh`')"
+    "df_veh['hhveh'].describe().to_frame().style.set_caption(\n",
+    "    'Summary Statistics of Column `hhveh`')"
    ]
   },
   {
@@ -363,7 +367,8 @@
     }
    ],
    "source": [
-    "df['htrips'].describe().to_frame().style.set_caption('Summary Statistics of Column `htrips`')"
+    "df['htrips'].describe().to_frame().style.set_caption(\n",
+    "    'Summary Statistics of Column `htrips`')"
    ]
   },
   {
@@ -669,7 +674,8 @@
     }
    ],
    "source": [
-    "df_new_inc_cat.groupby(['inc_cat']).size().to_frame('num_households').style.set_caption(\"Number of households by inc_cat\")"
+    "df_new_inc_cat.groupby(['inc_cat']).size().to_frame(\n",
+    "    'num_households').style.set_caption(\"Number of households by inc_cat\")"
    ]
   },
   {
@@ -852,7 +858,8 @@
    "source": [
     "def set_incval(df_incval):\n",
     "    \"\"\"\n",
-    "    Creates new variable `incval` that is equal to the midpoint of indicated salary ranges.\n",
+    "    Creates new variable `incval` that is equal to the midpoint of indicated \n",
+    "    salary ranges.\n",
     "    \"\"\"\n",
     "    for index, row in df_incval.iterrows():\n",
     "        if row.income == 1:\n",
@@ -872,7 +879,8 @@
     "        elif row.income == 8:\n",
     "            df_incval.set_value(index, 'incval', 250000)\n",
     "        elif row.income == 99:\n",
-    "            df_incval.set_value(index, 'incval', None) # Setting 99 as NA, so it won't be counted.         \n",
+    "            df_incval.set_value(index, 'incval', None) \n",
+    "            # Setting 99 as NA, so it won't be counted.         \n",
     "    return df_incval\n",
     "\n",
     "df_incval_new = set_incval(df_new_inc_cat)\n",
@@ -978,7 +986,9 @@
     "\n",
     "\n",
     "df_veh_cat_new = vehicle_categorizer(df)\n",
-    "df_veh_cat_new.groupby(['hhveh_cat'])['htrips'].mean().to_frame().style.set_caption('Average Number of Trips by hhveh_cat')"
+    "df_veh_cat_new.groupby([\n",
+    "    'hhveh_cat'])['htrips'].mean().to_frame().style.set_caption(\n",
+    "    'Average Number of Trips by hhveh_cat')"
    ]
   },
   {
@@ -1177,7 +1187,8 @@
     "    wd + 'household.csv'), usecols=['resty', 'income', 'hhveh', \n",
     "                                    'hhwgt', 'htrips', 'exphhwgt'])\n",
     "df['hhvehwgt'] = df['exphhwgt'] * df['hhveh']\n",
-    "df.iloc[0].to_frame().style.set_caption('Output of first line in data (row 0) to check work')"
+    "df.iloc[0].to_frame().style.set_caption(\n",
+    "    'Output of first line in data (row 0) to check work')"
    ]
   },
   {
@@ -1298,7 +1309,8 @@
     "\n",
     "# Apply ribus calculation function and computed weighted number\n",
     "df = calc_ribus(df)\n",
-    "ribus_pct = (df['ribus_count'].sum() / 6449) * 100 # where 6449 is the sample size\n",
+    "ribus_pct = (df['ribus_count'].sum() / 6449) * 100 # where 6449 \n",
+    "                                                   # is the sample size\n",
     "df['ribuswgt'] = df['exphhwgt'] * df['ribus_count']\n",
     "\n",
     "# Computer unweighted number\n",
